# fynch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish-validation.yml  publish.yml
benches/: fy_bench.rs  sinkhorn_bench.rs
examples/: soft_estimator_validation.rs  soft_rank_shootout.rs
proptest-regressions/: loss.txt
src/: bregman.rs  curvature.rs  fenchel.rs  lapsum.rs  lib.rs  loss.rs  metrics.rs  sigmoid.rs  sinkhorn.rs  sorting_network.rs  sparsemap.rs  topk.rs
tests/: blondel_reference.rs  curvature_props.rs  property_tests.rs  sorting_network_props.rs
tests/fixtures/: blondel_reference.json
